--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://nataligru.github.io/list-of-articles",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
